Fix spacing and size on tagline

--- a/public/assets/css/woodshedr.css
+++ b/public/assets/css/woodshedr.css
@@ -37,7 +37,8 @@ header {
 .tagline {
   text-transform: uppercase;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 13px;
+  letter-spacing: -0.02em;
   color: white;
   padding-top: 2px; }
 
